# UnsafeToDo

./: .gitignore  Cargo.toml  README.md  add_random_todos.sh  todos.txt
.github/workflows/: release.yaml  release.yml
src/: argument.rs  cli.rs  commands.rs  config.rs  display.rs  git_sync.rs  main.rs  parser.rs  priority.rs  sort_order.rs  sync.rs  test.txt  todo.rs  todo_list.rs  utils.rs
src/commands/: add.rs  complete.rs  config_command.rs  help.rs  remove.rs  show.rs  sort.rs  sync.rs  update.rs
