[package]
name = "utodo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
dirs = "5.0"  # für plattformunabhängigen Pfad
tabled = "0.19" #displaying todos
terminal_size = "0.4.2" #adustable table
git2 = "0.20.2"
