[package]
name = "unsafetodo"
description = "A fast CLI todo tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
dirs = "5.0"  
tabled = "0.19" 
terminal_size = "0.4.2" 
git2 = "0.20.2"
clap = { version = "4.5.42", features = ["derive", "color", "suggestions"] }
